sass/style.scss
@import 'sass/reset.scss', 'sass/fonts.scss';
:root {
  --scout-hall: #FFFF80;
  --sh02: #FFF6A3;
  --sh03: #F9F989;
  --dusk: #352083;
  --night: #131518;
  --dk02: #D6D0FF;
  --dk01: #E1DDFB;
  --up: #B0EAEE;
  
  --wedge-height: 300px;
  --logo-size: calc(var(--wedge-height)*0.6666666);
  --logo-indent: calc(var(--wedge-height)*0.08);
  
  --left-indent: 26px;
  --angle: -15deg;
}

@font-face {
  font-family: 'Cabinet Grotesk';
  src: url('../fonts/CabinetGrotesk-Variable.woff2') format('woff2'), url('../fonts/CabinetGrotesk-Variable.woff') format('woff');
  font-style: normal;
  font-weight: 1 999;
}

html {
  height: 100%;
  font-size: 17px;
}

body {
  width: 100%;
  color: var(--dk01);
  background-color: var(--dusk);
  font-family: Cabinet Grotesk, Helvetica, San Francisco, sans-serif;
  line-height: 1.5;
  font-weight:700;
  /* letter-spacing: 0.01em; */
  letter-spacing: -0.02em;
  -webkit-text-size-adjust: none;
}

main {
  width: 100%;
  height: auto;
  position: relative;
  overflow: hidden;
}

section h2 span, section h3 span, section p {
  transform: rotate(var(--angle));
  transform-origin: top left;
  background-color: none;
  display: block;
}

section h2, section h3 {
  font-size: 1.625rem;
}

.high-priority span {
  font-size: 2.875rem;
  font-weight: 650;
  margin: 0px;
  padding: 0px;
  line-height: 0.9;
}

.logo-area{
  position: fixed;
  top: 0px;
  left: 0px;
  height: var(--wedge-height);
  z-index: 3;
}

.spiral-container.masked {
  position: absolute;
  left: 0;
  bottom: 0;
  -webkit-mask-image: url("../images/mask-slant.svg");
  mask-image: url("../images/mask-slant.svg");
  mask-repeat: no-repeat;
  
  width: 3200px;
  height: 1150px;
  transform-origin: bottom left;
  
  background-color: var(--scout-hall);
}

.spiral-container.main {
  position: fixed;
  top: var(--wedge-height);
}

.logo {
  position: absolute;
  bottom: 0;
  left: var(--logo-indent);
  width: var(--logo-size);
  transform: translateY(calc((var(--wedge-height) * 0.25) * -1));
}

.spiral-pattern-cw, .spiral-pattern-ccw {
  width: calc(var(--wedge-height)*6.3);
  height: calc(var(--wedge-height)*6.3);
  background-repeat: no-repeat;
  
  transform: rotate(0deg) translate(-50%, -50%);
  transform-origin: top left;
  
  transition: 0.2s ease-out;
}

.spiral-pattern-cw.wedge, .spiral-pattern-ccw.wedge {
  position: absolute;
  top: calc(100% - (var(--logo-size) * 0.5) - (var(--wedge-height) * 0.25));
  left: calc((var(--logo-size) * 0.5) + var(--logo-indent));
}

.spiral-pattern-cw.main, .spiral-pattern-ccw.main {
  position: absolute;
  top: calc(((var(--logo-size) * 0.5) + var(--wedge-height) * 0.25) * -1);
  left: calc(var(--logo-size) * 0.5 + var(--logo-indent));
  z-index: 2;
}

.spiral-pattern-cw.wedge {
  background-image: url("../images/gjc-pattern-cw-wedge.svg");	
}

.spiral-pattern-ccw.wedge {
  background-image: url("../images/gjc-pattern-ccw-wedge.svg");
}

.spiral-pattern-cw.main {
  background-image: url("../images/gjc-pattern-cw-main.svg");
}

.spiral-pattern-ccw.main {
  background-image: url("../images/gjc-pattern-ccw-main.svg");
}

.banner {
  background-color: #2D1774;
  position: fixed;
  top: var(--wedge-height);
  left: -40px;
  transform: rotate(var(--angle));
  transform-origin: 0% 50%;
  padding: 10px 50px 10px 70px;
  width: calc(100% + 80px);
  z-index: 5;
  box-shadow: 0px 4px #13151850;
}

.banner-text{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.banner h2 {
  color: var(--contrast);
  display: inline;
}

.content-container{
  width: 100%;
  overflow: hidden;
  background-color: var(--dusk);
  padding-top: calc(var(--logo-indent)*0.5);
}

.bulldozer {
  height: calc(var(--wedge-height)*0.5);
  min-height: 150px;
}

section {
  padding-left: var(--left-indent);
  width: 100%;
  height: calc(100vh - var(--logo-indent));
  min-height: calc(var(--wedge-height)*1.7);
  display: grid;
  align-items: center;
  align-content: center;
  grid-gap: 40px;
}

@keyframes bounce {
  0% { transform: rotate(0deg); }
  50% { transform: rotate(60deg); }
  100% { transform: rotate(0deg); }
}

#Face {
  animation: bounce 3s ease-in-out infinite;
  transform-origin: 50% 50%;
}

@keyFrames fadeIn {
  0% { opacity: 0; transform: translate(80px, 80px) rotate(0deg); }
  100% { opacity: 1; transform: translate(0px, 0px) rotate(var(--angle)); }
}

@keyFrames fadeOut {
  0% { opacity: 1; transform: translate(0px, 0px) rotate(var(--angle)); }
  100% { opacity: 0; transform: translateX(80px, 80px) rotate(0deg); }
}

@media (min-width:430px) {
  
  html{
    font-size: 22px;
  }
  
  section {
    min-height: calc(var(--wedge-height)*2);
  }
  
}

@media (min-width:600px) {
  
  :root {
   --left-indent: 30%;
  }
  
  .banner h2, p {
    font-size: 0.8rem;
  }
  
  .banner-text{
    margin: 0 40px 0 var(--left-indent);
    max-width: 400px;
  }
  
  .bulldozer {
    height: calc(var(--wedge-height)*0.4);
  }
  
  section {
    min-height: calc(var(--wedge-height)*1.7);
  }

}

@media (min-width:1200px) {
  
  html{
	  font-size: 26px;
  }
  
  :root {
	  --left-indent: 480px;
	  --wedge-height: 420px;
  }
  
  body {
	  font-weight: 650;
  }
  
  .banner h2, p {
    font-size: 1rem;
  }
  
  .banner-text {
	  max-width: 650px;
  }
  
  h3 span {
	  font-weight: 600;
  }
  
  .banner {
	  left: -40px;
	  width: calc(100% + 120px);
  }
  
  section {
    min-height: calc(var(--wedge-height)*1.3);
  }
  
}

@media (min-width:1900px) {
  
  html{
    font-size: 32px;
  }
  
  :root {
    --left-indent: 950px;
    --wedge-height: 650px;
  }
  
  body {
    font-weight: 650;
  }
  
  .banner {
    width: calc(100% + 150px);
  }
  
  .banner-text {
    margin: 0 40px 0 calc(var(--left-indent) + 20px);
  }
  
  .bulldozer {
    height: 0px;
  }
  
  section {
    min-height: calc(var(--wedge-height)*1.2);
  }
  
}

